--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
     "react-icons": "^3.7.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "socket.io-client": "^2.2.0"
   },
